CREATE TABLE `db_supermarket`.`CUSTOMER_DETAILS` (`id` INT NOT NULL, `first_name` VARCHAR(64) NOT NULL, `last_name` VARCHAR(128), `email` VARCHAR(128) NOT NULL, `password` VARCHAR(128) NOT NULL, `dob` DATE NOT NULL, `telephone` VARCHAR(16), `member_card_sn` CHAR(16), `points` DECIMAL(10, 2) NOT NULL, `created_at` DATETIME NOT NULL, `modified_at` DATETIME NOT NULL, `admw_origin_file_name` VARCHAR(128) NOT NULL, PRIMARY KEY (`id`));
CREATE TABLE `db_supermarket`.`CUSTOMER_PURCHASE_INSTANCE` (`id` INT NOT NULL, `id_cust` INT NOT NULL, `points_gained` DECIMAL(10, 2) NOT NULL, `points_used` DECIMAL(10, 2) NOT NULL, `created_at` DATETIME NOT NULL, `admw_origin_file_name` VARCHAR(128) NOT NULL, PRIMARY KEY (`id`), FOREIGN KEY (`id_cust`) REFERENCES `CUSTOMER_DETAILS` (`id`) ON DELETE RESTRICT);
CREATE TABLE `db_supermarket`.`STAFF_DETAILS` (`id` INT NOT NULL, `first_name` VARCHAR(64) NOT NULL, `last_name` VARCHAR(128), `email` VARCHAR(128) NOT NULL, `password` VARCHAR(128) NOT NULL, `telephone` VARCHAR(16) NOT NULL, `created_at` DATETIME NOT NULL, `modified_at` DATETIME NOT NULL, `admw_origin_file_name` VARCHAR(128) NOT NULL, PRIMARY KEY (`id`));
CREATE TABLE `db_supermarket`.`PRODUCT_BRAND` (`id` INT NOT NULL, `name` VARCHAR(64) NOT NULL, `active` BOOL NOT NULL, `created_at` DATETIME NOT NULL, `modified_at` DATETIME NOT NULL, `modified_by` INT NOT NULL, `admw_origin_file_name` VARCHAR(128) NOT NULL, PRIMARY KEY (`id`), FOREIGN KEY (`modified_by`) REFERENCES `STAFF_DETAILS` (`id`) ON DELETE RESTRICT);
CREATE TABLE `db_supermarket`.`PRODUCT_CATEGORY` (`id` INT NOT NULL, `name` VARCHAR(64) NOT NULL, `image_url` VARCHAR(256), `active` BOOL NOT NULL, `created_at` DATETIME NOT NULL, `modified_at` DATETIME NOT NULL, `modified_by` INT NOT NULL, `admw_origin_file_name` VARCHAR(128) NOT NULL, PRIMARY KEY (`id`), FOREIGN KEY (`modified_by`) REFERENCES `STAFF_DETAILS` (`id`) ON DELETE RESTRICT);
CREATE TABLE `db_supermarket`.`PRODUCT_COUNTRY` (`id` INT NOT NULL, `name` VARCHAR(64) NOT NULL, `admw_origin_file_name` VARCHAR(128) NOT NULL, PRIMARY KEY (`id`));
CREATE TABLE `db_supermarket`.`PRODUCT_DETAILS` (`id` INT NOT NULL, `id_brand` INT NOT NULL, `id_country` INT NOT NULL, `id_category_primary` INT NOT NULL, `id_category_parent_major` INT NOT NULL, `id_category_parent_minor` INT, `name` VARCHAR(128) NOT NULL, `price` DECIMAL(10, 2) NOT NULL, `display_unit` VARCHAR(32) NOT NULL, `description` VARCHAR(5120), `key_information` VARCHAR(5120), `rating_1` INT NOT NULL, `rating_2` INT NOT NULL, `rating_3` INT NOT NULL, `rating_4` INT NOT NULL, `rating_5` INT NOT NULL, `image_url` VARCHAR(256), `active` BOOL NOT NULL, `created_at` DATETIME NOT NULL, `modified_at` DATETIME NOT NULL, `modified_by` INT NOT NULL, `admw_origin_file_name` VARCHAR(128) NOT NULL, PRIMARY KEY (`id`), FOREIGN KEY (`id_brand`) REFERENCES `PRODUCT_BRAND` (`id`) ON DELETE RESTRICT, FOREIGN KEY (`id_country`) REFERENCES `PRODUCT_COUNTRY` (`id`) ON DELETE RESTRICT, FOREIGN KEY (`id_category_primary`) REFERENCES `PRODUCT_CATEGORY` (`id`) ON DELETE RESTRICT, FOREIGN KEY (`id_category_parent_major`) REFERENCES `PRODUCT_CATEGORY` (`id`) ON DELETE RESTRICT, FOREIGN KEY (`id_category_parent_minor`) REFERENCES `PRODUCT_CATEGORY` (`id`) ON DELETE RESTRICT, FOREIGN KEY (`modified_by`) REFERENCES `STAFF_DETAILS` (`id`) ON DELETE RESTRICT);
CREATE TABLE `db_supermarket`.`PRODUCT_SECONDARY_CATEGORY` (`id` INT NOT NULL, `id_prod` INT NOT NULL, `id_cat` INT NOT NULL, `admw_origin_file_name` VARCHAR(128) NOT NULL, PRIMARY KEY (`id`), FOREIGN KEY (`id_prod`) REFERENCES `PRODUCT_DETAILS` (`id`) ON DELETE RESTRICT);
CREATE TABLE `db_supermarket`.`CUSTOMER_PURCHASE_INSTANCE_ITEMS` (`id` INT NOT NULL, `id_inst` INT NOT NULL, `id_prod` INT NOT NULL, `quantity` INT NOT NULL, `price` DECIMAL(10, 2) NOT NULL, `admw_origin_file_name` VARCHAR(128) NOT NULL, PRIMARY KEY (`id`), FOREIGN KEY (`id_inst`) REFERENCES `CUSTOMER_PURCHASE_INSTANCE` (`id`) ON DELETE RESTRICT, FOREIGN KEY (`id_prod`) REFERENCES `PRODUCT_DETAILS` (`id`) ON DELETE RESTRICT);
CREATE TABLE `db_supermarket`.`CUSTOMER_CART_ITEMS` (`id` INT NOT NULL, `id_cust` INT NOT NULL, `id_prod` INT NOT NULL, `quantity` INT NOT NULL, `admw_origin_file_name` VARCHAR(128) NOT NULL, PRIMARY KEY (`id`), FOREIGN KEY (`id_cust`) REFERENCES `CUSTOMER_DETAILS` (`id`) ON DELETE RESTRICT, FOREIGN KEY (`id_prod`) REFERENCES `PRODUCT_DETAILS` (`id`) ON DELETE RESTRICT);